...
            padding: const EdgeInsets.symmetric(horizontal: 16, vertical: 8),
            child: Row(
              mainAxisSize: MainAxisSize.max,
              children: [
                Expanded(
                  child: TextField(
                    key: const Key('homepage_search_field'),
                    controller: textEditingController,
                    textInputAction: TextInputAction.done,
                    onSubmitted: (_) => searchProduct(),
                    // decoration: InputDecoration(),
                  ),
                ),
                ElevatedButton.icon(
                  key: const Key('homepage_search_button'),
                  onPressed: searchProduct,
                  label: const Icon(Icons.search),
                ),
              ],
            ),
          ),
...
