...
      price: 1200.00,
      sellerName: 'James Walker',
      rating: 4.7,
      imagePath: 'assets/images/business_consulting.webp',
    ),
    Product(
      jobName: 'Animation Services',
      description: 'Create animations for videos, games, and advertisements.',
      price: 900.00,
      sellerName: 'Amelia Harris',
      rating: 4.8,
      imagePath: 'assets/images/animation_services.webp',
    ),
...
